[project]
name = "What Am I Shooting At?"
version = "1"
authors = [{ name = "Itzmugg" }]
description = """Shoot at an object to discover it's name and class
options to draw details on HUD aswell as dumping to the log"""

[tool.sdkmod]
name = "What Am I Shooting At?"
supported_games = ["BL3"]
download = "https://github.com/Itzsmugg/smuggs-oak-sdk-mods/raw/master/projectile_dysfunction/projectile_dysfunction.sdkmod"
version = "1.0"