[project]
name = "Add_to_inv"
version = "1"
authors = [{ name = "Itzsmugg" }]
description = """Adds a keybind to reset all spawns.
DISCLAIMER: using this mod during a playthrough could result in a sequence break in the mission progress, which could lead to a progress block"""

[tool.sdkmod]
name = "add to inv"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/Itzsmugg/smuggs-oak-sdk-mods/releases/download/nightly/add_to_inv.sdkmod"


