[project]
name = "Add_to_inv"
version = "1"
authors = [{ name = "Itzsmugg" }]
description = "Adds the add_to_inv command to add a serial code from a save editor."

[tool.sdkmod]
name = "add to inv"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/Itzsmugg/smuggs-oak-sdk-mods/raw/master/add_to_inv/add_to_inv.sdkmod"


