[project]
name = "Leap_Slam"
version = "1"
authors = [{ name = "Itzsmugg" }]
description = """Allows the player to leap slam, when slamming from a sprint jump."""

[tool.sdkmod]
name = "Leap Slam"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/Itzsmugg/smuggs-oak-sdk-mods/releases/tag/slamleap"
version = "1"

