[project]
name = "Leap_Slam"
version = "1"
authors = [{ name = "Itzsmugg" }]
description = """Allows the player to leap slam, when slamming from a sprint jump, thrusting the player forwards before slamming on the ground.

"""

[tool.sdkmod]
name = "Leap Slam"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = ""
version = "1"

