[project]
name = "Leap_Slam"
version = "1"
authors = [{ name = "Itzsmugg" }]
description = """Allows the player to leap slam, when slamming from a sprint jump, thrusting the player forwards before slamming on the ground.
Scales with Players Speed

"""

[tool.sdkmod]
name = "Leap Slam"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = "https://github.com/Itzsmugg/smuggs-oak-sdk-mods/raw/master/leap_slam/leap_slam.sdkmod"
version = "1"

